Web: fix broken layout after text edit

--- a/webskins/_default_/pub/_default_.css
+++ b/webskins/_default_/pub/_default_.css
@@ -316,6 +316,7 @@ tr.evenrow td {
 
 .subsection div.checkbox {
 	padding: 9px 0 0 3px;
+	max-width: 537px;
 }
 
 .subsection div.checkbox input {
@@ -380,4 +381,3 @@ td {
 .textsection p {
 	margin-bottom: 0.7em;
 }
-
